Fix mobile viewport overflow - content fits within screen width

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -192,10 +192,14 @@
   transition: margin @transition-normal;
   .flex-column();
   min-height: 100vh;
+  max-width: calc(100vw - @sidebar-width);
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 .sidebar.collapsed ~ .main-content {
   margin-left: @sidebar-collapsed-width;
+  max-width: calc(100vw - @sidebar-collapsed-width);
 }
 
 // Top Header
@@ -207,6 +211,8 @@
   position: sticky;
   top: 0;
   z-index: 50;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .header-left {
@@ -301,10 +307,17 @@
   max-width: 100%;
   overflow-x: hidden;
   box-sizing: border-box;
+  width: 100%;
 }
 
 // Mobile First - Sidebar always visible but collapsed on mobile
 @media (max-width: 639px) {
+  .app-container {
+    width: 100vw;
+    max-width: 100vw;
+    overflow-x: hidden;
+  }
+
   .sidebar {
     width: @sidebar-collapsed-width;
     position: fixed;
@@ -359,6 +372,7 @@
     .main-content {
       margin-left: 0 !important;
       margin-right: @sidebar-collapsed-width !important;
+      max-width: calc(100vw - @sidebar-collapsed-width) !important;
     }
   }
 
@@ -372,12 +386,15 @@
     .main-content {
       margin-left: @sidebar-collapsed-width !important;
       margin-right: 0 !important;
+      max-width: calc(100vw - @sidebar-collapsed-width) !important;
     }
   }
 
   .main-content {
     margin-left: @sidebar-collapsed-width;
     margin-right: 0;
+    max-width: calc(100vw - @sidebar-collapsed-width);
+    width: calc(100vw - @sidebar-collapsed-width);
   }
 
   .top-header {
